[tool.poetry]
name = "ratatouille"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.6"
pandas = "^0.25.3"
plotnine = "^0.6.0"
ipython = "^7.9"
pytest = "^5.2"
wheel = "^0.34.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
